--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,8 @@ sphinx_*/
 # Android ABI build files
 abi_gki_protected_exports
 all_kmi_symbols
+
+drivers/soc/oplus
+include/soc/oplus/dfr
+include/soc/oplus/dft
+include/soc/oplus/boot
